--- a/vtkplotter_examples/tutorial.ipynb
+++ b/vtkplotter_examples/tutorial.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " vtkplotter 2020.0.2  | vtk 8.1.2 | python 3.7 | press h for help. \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "###########################################################\n",
     "# Quick tutorial. Check out more examples in directories:\n",
@@ -58,8 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded Mesh(vtkActor) objects:  3\n",
-      " vtkplotter 2020.0.2  | vtk 8.1.2 | python 3.7 | press h for help. \n"
+      "Loaded Mesh(vtkActor) objects:  3\n"
      ]
     }
    ],
@@ -81,15 +72,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " vtkplotter 2020.0.2  | vtk 8.1.2 | python 3.7 | press h for help. \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#########################################################################################\n",
     "# Draw a spline through a set of points:\n",
@@ -111,15 +94,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " vtkplotter 2020.0.2  | vtk 8.1.2 | python 3.7 | press h for help. \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#########################################################################################\n",
     "# Increase the number of points in a mesh using subdivide()\n",
